# queens

./: CONTRIBUTING.md  README.md  postBuild  pyproject.toml
demos/: find_configs.ipynb
queens/: qconfig.py
tests/: test_qconfig.py
